<resources>
    <!--    user profile values   -->
    <string name="app_name">looptser</string>
    <string name="user_name">Daniel Tovar</string>
    <string name="user_email_">daniel.tovar@gmail.com</string>
    <string name="about_me">Sobre mi</string>
    <string name="active">Activo(a)</string>
    <string name="disabled">Desactivo(a)</string>
    <string name="post">PUBLICACIONES</string>

    <!--    login and register values   -->
    <string name="slogan">MAKE A LOOP</string>
    <string name="user_login">Ingresar</string>
    <string name="user_login_action">INICIAR SESIÓN</string>
    <string name="user_login_action_lower">Iniciar Sesión</string>
    <string name="user_register">Registro</string>
    <string name="user_register_upper">REGISTRO</string>
    <string name="user_register_action">Registrarme</string>
    <string name="user_user">Usuario</string>
    <string name="user_password">Contraseña</string>
    <string name="user_password_forgot">¿Olvidaste tu contraseña?</string>
    <string name="user_no_account">¿No tienes una cuenta?</string>
    <string name="user_have_account">¿Tienes una cuenta?</string>
    <string name="user_option">o bien</string>
    <string name="user_email">Email</string>
    <string name="user_verify_password">Verifique su contraseña</string>
    <string name="user_google_login">INGRESE CON GOOGLE</string>

    <!--    contacts chat values-->
    <string name="contact_name">Felipe Triana</string>
    <string name="contact_name_two">La 🅱️andida</string>
    <string name="contact_msg">Hola, que hace socio</string>
    <string name="contact_msg_two">Hola mor, un roze por medallo?</string>
    <string name="contact_msg_stamp">10:30am</string>
    <string name="contact_msg_stamp_two">12:00pm</string>


    <string name="chat_title">Mis loops</string>
    <string name="example">La tecnología es la suma de técnicas, habilidades,métodos y procesos utilizados en la producción de bienes o servicios o en el logro de objetivos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coment">Comentar</string>

    <!-- notifications default values    -->
    <string name="notification_username">User name</string>
    <string name="notification_content">Ah hecho un nuevo loop! ✨</string>
    <string name="notification_time">12:00 pm</string>
    <string name="notification_title">Notificaciones</string>

    <!-- posts values  -->
    <string name="post_user">User name</string>
    <string name="post_date">May 13, 2023</string>

    <!--  add values  -->
    <string name="add_post">Agrega un post</string>
    <string name="add_description_input">Añade una descripción para tu post</string>
    <string name="add_publish">Publicar</string>
    <string name="add_img_title">Selecciona una imagen</string>
</resources>
