<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_login_ui"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="34sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/regular_font"/>

        <Space
            android:layout_width="313dp"
            android:layout_height="43dp" />

        <EditText
            android:id="@+id/login_user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_user"
            android:autofillHints="text"
            android:drawableStart="@drawable/login_profile_icon"
            android:drawableTint="@color/sub_strong"
            android:drawablePadding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/sub_strong"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:autofillHints="password"
            android:drawableStart="@drawable/svg_password"
            android:drawableTint="@color/sub_strong"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/sub_strong"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/login_action_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_orange_item_ui"
            android:text="@string/user_login_action" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_password_forgot"
            android:textColor="@color/sub_strong"
            android:textStyle="bold"
            android:gravity="center"
            android:linksClickable="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/login_option_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_option"
            android:textColor="@color/sub_strong"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/login_action_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_item_ui"
            android:drawableStart="@drawable/svg_google"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/user_google_login"
            app:backgroundTint="@color/sub_minimal"
            android:textColor="@color/sub_strong"/>

        <Space
            android:layout_width="313dp"
            android:layout_height="75dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_no_account_text"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_no_account"
                android:textColor="@color/sub_strong" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_register_action"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:linksClickable="true"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/login_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/visby_font"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_eslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eslogan"
        android:fontFamily="@font/regular_font"
        android:textColor="@color/sub"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_title" />

</androidx.constraintlayout.widget.ConstraintLayout>