<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/visby_font"
            android:gravity="center"
            android:text="@string/user_register"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_no_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular_font"
                android:gravity="end"
                android:paddingEnd="11dp"
                android:text="@string/user_have_account"
                android:textColor="@color/sub_minimal" />

            <TextView
                android:id="@+id/signup_go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/regular_font"
                android:linksClickable="true"
                android:paddingEnd="11dp"
                android:text="@string/user_login_action_lower"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <EditText
            android:id="@+id/signup_input_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:background="@drawable/rounded_soft_orange_item_ui"
            android:drawableStart="@drawable/login_profile_icon"
            android:drawablePadding="12dp"
            android:drawableTint="@color/sub_minimal"
            android:ems="10"
            android:hint="@string/user_user"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/sub_minimal"
            app:backgroundTint="@color/soft_orange" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_soft_orange_item_ui"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/svg_email"
            android:drawableTint="@color/sub_minimal"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/sub_minimal"
            app:backgroundTint="@color/soft_orange" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/signup_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:background="@drawable/rounded_soft_orange_item_ui"
            android:drawableStart="@drawable/svg_password"
            android:drawablePadding="12dp"
            android:drawableTint="@color/sub_minimal"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/sub_minimal"
            app:backgroundTint="@color/soft_orange" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/signup_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:background="@drawable/rounded_soft_orange_item_ui"
            android:drawableStart="@drawable/svg_password"
            android:drawablePadding="12dp"
            android:drawableTint="@color/sub_minimal"
            android:ems="10"
            android:hint="@string/user_verify_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/sub_minimal"
            app:backgroundTint="@color/soft_orange" />

        <Space
            android:layout_width="309dp"
            android:layout_height="56dp" />

        <Button
            android:id="@+id/signup_btn_action"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_item_ui"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_register_upper"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/sub_minimal" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/signup_go_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_orange_item_ui"
        android:contentDescription="@string/user_have_account"
        android:src="@drawable/svg_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>