<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Add_Fragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        style="@style/SCREEN"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_title"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/visby_font"
                android:text="@string/add_post"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.517" />

            <Button
                android:id="@+id/add_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_soft_orange_item_ui"
                android:text="@string/add_publish"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.898"
                app:layout_constraintStart_toEndOf="@+id/add_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567"
                tools:layout_editor_absoluteX="278dp"
                tools:layout_editor_absoluteY="7dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/add_img"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        app:tint="@color/soft_orange" />

    <TextView
        android:id="@+id/add_img_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular_font"
        android:text="@string/add_img_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/add_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <EditText
        android:id="@+id/add_input"
        android:layout_width="311dp"
        android:layout_height="47dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/add_description_input"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_img"
        app:layout_constraintVertical_bias="0.269" />

</androidx.constraintlayout.widget.ConstraintLayout>